# tongue-diagnosis

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-cpu.txt  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  auth_core.py  batch_worker.py  config.py  deps.py  infer_runner.py  logging_config.py  main.py  rate_limit.py  train_worker.py
api/routers/: __init__.py  auth.py  batch_infer.py  images.py  infer.py  predictions.py  training.py
core/: __init__.py  derived_regenerate.py  infer_slots.py  inference_service.py  inference_yolo.py  preprocess_classify.py  sam_bridge.py  train_export.py
dataset/: README.md
db/: __init__.py  models.py  repository.py  seed.py  session.py  sqlite_util.py
deploy/: Dockerfile  README.md  docker-compose.yml
docs/: 开发计划-舌象诊断系统服务化-Vue-20260426.md  详细设计-舌象诊断系统服务化-Vue-20260426.md
docs/ui-screenshots/: README.md
labelme_yolo/: 7542e转YOLOv8-使用说明.md  collect_labelme_class_folders_to_flat.py  prepare_classify_dataset.py
migrations/: env.py
migrations/versions/: a77541d55a3b_p1_initial.py  b2c91e4a8f01_p2_async_jobs.py
tests/: conftest.py  test_api_mvp.py  test_derived_regenerate.py  test_infer_api.py  test_preprocess.py  test_rate_limit.py  test_sam_bridge_contract.py  test_train_export_selection.py  test_train_list.py
tongue_diag/: __init__.py
tongue_sam/: Python310-切换与使用指南.md  predict.py  requirements-cpu.txt  requirements-gpu-cu121.txt  requirements.txt  utils_metrics.py  临时屏蔽全局target-清华源安装脚本.md
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+35 files in other folders)
